--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@react-three/drei": "^9.105.4",
     "@react-three/fiber": "^8.16.2",
     "framer-motion": "^11.1.7",
@@ -19,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
     "react-tilt": "^1.0.2",
+    "react-typed": "^2.0.12",
     "react-vertical-timeline-component": "^3.6.0",
     "three": "^0.163.0"
   },
